split async samtools and tribble options